--- a/app/src/main/res/layout/fragment_patient_to_pharmacy_details.xml
+++ b/app/src/main/res/layout/fragment_patient_to_pharmacy_details.xml
@@ -58,7 +58,7 @@
                 android:layout_centerInParent="true">
 
                 <ImageView
-                    android:id="@+id/open_requests"
+                    android:id="@+id/open_chat_requests"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:background="@drawable/circle_white_back"
