--- a/app/src/main/res/layout/fragment_request_chat_patient_to_pharmay.xml
+++ b/app/src/main/res/layout/fragment_request_chat_patient_to_pharmay.xml
@@ -63,9 +63,9 @@
             android:id="@+id/rel_chat">
 
             <ImageView
+                android:id="@+id/btn_send_images"
                 android:layout_width="45dp"
                 android:layout_height="45dp"
-                android:id="@+id/btn_send_files"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentRight="true"
                 android:src="@drawable/ic_baseline_photo_camera_24"
@@ -84,7 +84,7 @@
                 android:layout_toStartOf="@+id/btn_send"
                 android:maxLines="5"
                 android:padding="10dp"
-                android:layout_toEndOf="@+id/btn_send_files"
+                android:layout_toEndOf="@+id/btn_send_images"
                 android:background="#fff"/>
 
             <ImageView
