--- a/app/src/main/res/layout/single_item_pateint_rec.xml
+++ b/app/src/main/res/layout/single_item_pateint_rec.xml
@@ -32,6 +32,7 @@
             android:layout_marginTop="10dp"
             />
         <TextView
+            android:id="@+id/txt_distance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Distance 2km"
