--- a/app/src/main/res/layout/single_item_pharmacy_requests.xml
+++ b/app/src/main/res/layout/single_item_pharmacy_requests.xml
@@ -47,7 +47,7 @@
                     android:id="@+id/txt_drug_price"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="14 EGP"
+                    android:text="14 "
                     android:textSize="14sp"
                     android:textColor="@color/main_color"
                     android:layout_marginTop="5dp"
