--- a/app/src/main/res/layout/fragment_patient_to_pharmacy_details.xml
+++ b/app/src/main/res/layout/fragment_patient_to_pharmacy_details.xml
@@ -35,6 +35,15 @@
                 android:textSize="18sp"
                 android:layout_centerInParent="true" />
 
+            <ImageView
+                android:id="@+id/to_chat_btn"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:src="@drawable/ic_baseline_message_24"
+                android:layout_centerVertical="true"
+                android:layout_alignParentEnd="true"
+                android:visibility="visible"/>
+
         </RelativeLayout>
 
         <ImageView
