--- a/app/src/main/res/layout/single_item_delivery_shipped_req.xml
+++ b/app/src/main/res/layout/single_item_delivery_shipped_req.xml
@@ -65,7 +65,8 @@
                 android:textSize="14sp"
                 android:textStyle="normal"
                 android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"/>
+                android:layout_marginRight="10dp"
+                android:visibility="invisible"/>
         </LinearLayout>
 
 
