--- a/app/src/main/res/layout/fragment_patient_delivery_progress.xml
+++ b/app/src/main/res/layout/fragment_patient_delivery_progress.xml
@@ -4,6 +4,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+        <variable
+            name="isLoading"
+            type="Boolean" />
         <import type="android.view.View"/>
     </data>
 
@@ -35,7 +38,13 @@
                 android:layout_centerInParent="true" />
 
         </RelativeLayout>
-
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="You haven't any orders for delivery"
+            android:textSize="18sp"
+            android:layout_centerInParent="true"
+            android:visibility="@{isLoading?View.VISIBLE:View.GONE,default = visible}"/>
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rec_shipped_req"
             android:layout_width="match_parent"
@@ -43,6 +52,8 @@
             android:layout_below="@+id/rel_bar"
             android:layout_marginTop="15dp"
             tools:listitem="@layout/single_item_delivery_shipped_req"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            android:visibility="@{isLoading?View.GONE:View.VISIBLE,default = gone}"
+            />
     </RelativeLayout>
 </layout>
