--- a/app/src/main/res/layout/fragment_verification_code.xml
+++ b/app/src/main/res/layout/fragment_verification_code.xml
@@ -3,6 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+        <variable
+            name="isLoading"
+            type="Boolean" />
         <import type="android.view.View"/>
     </data>
 
@@ -34,7 +37,15 @@
             android:textSize="15sp"
             android:gravity="center"
             android:textColor="#000"
-            android:background="#FFF" />
+            android:background="#FFF"
+            android:inputType="number"/>
+        <ProgressBar
+            android:id="@+id/prog_bar"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_centerInParent="true"
+            android:layout_above="@+id/verify_btn"
+            android:visibility="@{isLoading? View.VISIBLE : View.GONE , default = gone}"/>
 
         <Button
             android:id="@+id/verify_btn"
@@ -50,5 +61,8 @@
             android:textSize="18sp"
             android:textColor="#FFFFFF"
             android:gravity="center" />
+
+
+
     </RelativeLayout>
 </layout>
